--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@material-tailwind/react": "^2.1.10",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -20,7 +22,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
+    "react-slider": "^2.0.6",
+    "sweetalert2": "^11.14.0",
     "swiper": "^11.1.14",
     "zustand": "^5.0.0-rc.2"
   },
