--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-slider": "^2.0.6",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.14.0",
     "swiper": "^11.1.14",
     "zustand": "^5.0.0-rc.2"
