--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-player": "^2.16.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
+    "react-simplemde-editor": "^5.2.0",
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.5",
+    "simplemde": "^1.11.2",
     "sweetalert2": "^11.14.0",
     "swiper": "^11.1.14",
     "zustand": "^5.0.0-rc.2"
