--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-simplemde-editor": "^5.2.0",
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.5",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "simplemde": "^1.11.2",
     "sweetalert2": "^11.14.0",
     "swiper": "^11.1.14",
