--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.26.2",
     "react-simplemde-editor": "^5.2.0",
     "react-slider": "^2.0.6",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
