--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.11",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "pdfjs-dist": "^3.4.120",
@@ -35,6 +36,7 @@
     "simplemde": "^1.11.2",
     "sweetalert2": "^11.14.0",
     "swiper": "^11.1.14",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
