--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@material-tailwind/react": "^2.1.10",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "axios": "^1.7.7",
-    "framer-motion": "^11.11.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.474.0",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
+    "react-lottie-player": "^2.1.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.16.0",
     "react-query": "^3.39.3",
@@ -37,7 +48,10 @@
     "simplemde": "^1.11.2",
     "sweetalert2": "^11.14.0",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
+    "zod": "^3.24.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
@@ -52,7 +66,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.1"
   }
 }
