--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
     "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -44,6 +46,7 @@
     "react-player": "^2.16.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.10.1",
     "react-simplemde-editor": "^5.2.0",
     "react-slider": "^2.0.6",
     "react-spinners": "^0.14.1",
